# VWave

./: CMakeLists.txt  README.md  VWave.java  build.sh  main.cpp
.github/workflows/: main.yml
config/: method_white_list.txt
sample/: ExThreadTest.java  MethodTest.java  TestClass.java  TestedDemo.java  ThreadTest.java  buildAndRun.sh  target.json  test.sh  test_file_cpp.cpp  test_file_cpp.sh
src/: bootstrap.cpp  global.cpp  global.hpp  vm_service_manager.cpp  vm_service_manager.hpp
src/base/: CMakeLists.txt  vm_connection.cpp  vm_connection.hpp  vm_error.hpp  vm_model.cpp  vm_model.hpp  vm_service.hpp  vwave_core.cpp  vwave_core.hpp
src/base/error/: vm_error.hpp
src/base/include/: vm_error.hpp  vm_model.hpp
src/base/service/: vm_service.hpp
src/class_service/: vm_class_service.cpp  vm_class_service.hpp
src/data/: vm_data.hpp  vm_thread.hpp
src/frame_service/: vm_frame_service.cpp
src/method_service/: CMakeLists.txt  vm_jni_helper.cpp  vm_jni_helper.hpp  vm_method_invoke.cpp  vm_method_invoke.hpp  vm_method_service.cpp  vm_method_service.hpp  vm_param_watch.cpp  vm_param_watch.hpp
src/service_header/: vm_class_service.hpp  vm_frame_service.hpp  vm_method_service.hpp  vm_model.hpp  vm_non_breakpoint.hpp  vm_thread_service.hpp  vm_thread_tool.hpp  vwave_core.hpp
src/thread_service/: CMakeLists.txt  vm_thread_service.cpp  vm_thread_service.hpp
src/tools/: vm_async_queue.cpp  vm_loop_thread.cpp
