cmake_minimum_required (VERSION 2.6)
project (VWave)
find_package(JNI REQUIRED)
include_directories(${JAVA_INCLUDE_PATH})
include_directories(${JAVA_INCLUDE_PATH2})
aux_source_directory(./src DIR_SRC)
#aux_source_directory(${DIR_SRC}/base BASE_SRC)
#aux_source_directory(${DIR_SRC}/method_service METHOD_SERVICE_SRC)
add_subdirectory(./src/method_service)
add_subdirectory(./src/thread_service)
add_subdirectory(./src/base)
#add_subdirectory(./src/base)
add_library(${PROJECT_NAME} SHARED ${DIR_SRC} ${BASE_SRC} ${METHOD_SERVICE_SRC} ${THREAD_SERVICE_SRC})
target_link_libraries(${PROJECT_NAME} base)
target_link_libraries(${PROJECT_NAME} fastcommon)
target_link_libraries(${PROJECT_NAME} method_service)
target_link_libraries(${PROJECT_NAME} thread_service)
