cmake_minimum_required (VERSION 2.6)
project (VWave)
find_package(JNI REQUIRED)
include_directories(${JAVA_INCLUDE_PATH})
include_directories(${JAVA_INCLUDE_PATH2})
include_directories("/usr/include/fastcommon")
aux_source_directory(./src DIR_SRC)
aux_source_directory(./src/base DIR_BASE)
aux_source_directory(./src/method_service DIR_METHOD)
aux_source_directory(./src/thread_service DIR_THREAD)
add_library(${PROJECT_NAME} SHARED ${DIR_SRC} ${DIR_BASE} ${DIR_METHOD} ${DIR_THREAD})
target_link_libraries(${PROJECT_NAME} fastcommon)

