cmake_minimum_required (VERSION 2.6)
project (VWave)
find_package(JNI REQUIRED)
find_package(jsoncpp CONFIG REQUIRED)
include_directories(${JAVA_INCLUDE_PATH})
include_directories(${JAVA_INCLUDE_PATH2})
include_directories("/usr/include/fastcommon")
aux_source_directory(./src/service_header, DIR_HEADER)
aux_source_directory(./src DIR_SRC)
aux_source_directory(./src/base DIR_BASE)
aux_source_directory(./src/method_service DIR_METHOD)
aux_source_directory(./src/thread_service DIR_THREAD)
aux_source_directory(./src/frame_service DIR_FRAME)
aux_source_directory(./src/class_service DIR_CLASS)
aux_source_directory(./src/data DIR_DATA)
aux_source_directory(./src/tools DIR_TOOL)
add_library(${PROJECT_NAME} SHARED ${DIR_TOOL} ${DIR_DATA} ${DIR_HEADER} ${DIR_SRC} ${DIR_BASE} ${DIR_METHOD} ${DIR_THREAD} ${DIR_FRAME} ${DIR_CLASS})
target_link_libraries(${PROJECT_NAME} fastcommon)
target_link_libraries(${PROJECT_NAME} PRIVATE jsoncpp_object jsoncpp_static JsonCpp::JsonCpp)

