cmake_minimum_required (VERSION 2.6)
find_package(JNI REQUIRED)
include_directories(${JAVA_INCLUDE_PATH})
include_directories(${JAVA_INCLUDE_PATH2})
aux_source_directory(. Method_Service)
message("VWave_Service_Method: ${Method_Service}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR/archive})
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
add_subdirectory(../base ../base)
add_library(method_service STATIC ${Method_Service})
target_link_libraries(method_service PUBLIC base)