cmake_minimum_required (VERSION 2.6)
find_package(JNI REQUIRED)
include_directories(${JAVA_INCLUDE_PATH})
include_directories(${JAVA_INCLUDE_PATH2})
include_directories("/usr/include/fastcommon")
aux_source_directory(. Thread_Service)
message("VWave_Service_Thread: ${Thread_Service}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR/archive})
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
add_subdirectory(../base ../base)
add_library(thread_service STATIC ${Thread_Service})
target_link_libraries(thread_service PUBLIC base)
target_link_libraries(thread_service fastcommon)